fixed the alignment

--- a/mvmt/cartridges/app_custom_storefront_mvmt/cartridge/client/default/scss/product/detail.scss
+++ b/mvmt/cartridges/app_custom_storefront_mvmt/cartridge/client/default/scss/product/detail.scss
@@ -1215,7 +1215,7 @@
             justify-content: space-between;
 
             .content-asset {
-                margin-bottom: rem(15);
+                margin-bottom: rem(0);
                 display: inline-block;
                 justify-content: space-between;
 
